feat: add pos manager activation for device token
